Fixed alignment again

--- a/front-end/index.css
+++ b/front-end/index.css
@@ -120,7 +120,6 @@ body{
     column-rule-style: none;
     font-size: 20px;
     text-align: left;
-    padding-left: 60px;
 }
 h4{
   font-weight: bold;
